--- a/.github/workflows/deploy-action.yml
+++ b/.github/workflows/deploy-action.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Build project
         run: npm run build
 
